--- a/Challenge-3/blog-app/package.json
+++ b/Challenge-3/blog-app/package.json
@@ -3,8 +3,7 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite",
-        "serve": "concurrently \"php artisan serve\" \"vite\""
+        "dev": "vite"
     },
     "devDependencies": {
         "@headlessui/react": "^2.2.2",
