--- a/Challenge-4/backend/.gitignore
+++ b/Challenge-4/backend/.gitignore
@@ -1,24 +1,23 @@
+/.phpunit.cache
 /node_modules
+/public/build
 /public/hot
 /public/storage
 /storage/*.key
+/storage/pail
 /vendor
 .env
 .env.backup
+.env.production
+.phpactor.json
 .phpunit.result.cache
-docker-compose.override.yml
 Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
-/.idea
-/.vscode
-*.sublime-project
-*.sublime-workspace
-.php_cs.cache
-.php-cs-fixer.cache
-auth.json
+/auth.json
 /.fleet
-/.phpstorm.meta.php
-/_ide_helper.php
-/_ide_helper_models.php
+/.idea
+/.nova
+/.vscode
+/.zed
