--- a/Challenge-4/frontend/package.json
+++ b/Challenge-4/frontend/package.json
@@ -14,6 +14,8 @@
     "@tailwindcss/vite": "^4.1.5",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
+    "laravel-echo": "^2.0.2",
+    "pusher-js": "^8.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.2",
