--- a/Challenge-4/frontend/package.json
+++ b/Challenge-4/frontend/package.json
@@ -10,15 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.1.0",
+    "@chakra-ui/react": "^3.17.0",
+    "@emotion/react": "^11.14.0",
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.5",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.9.7",
     "laravel-echo": "^2.0.2",
+    "next-themes": "^0.4.6",
     "pusher-js": "^8.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.2",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.0",
     "socket.io-client": "^4.8.1",
     "zustand": "^5.0.4"
