--- a/Challenge-4/docker-compose.yml
+++ b/Challenge-4/docker-compose.yml
@@ -38,6 +38,26 @@ services:
       timeout: 20s
       retries: 10
 
+  app:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    container_name: laravel_app
+    volumes:
+      - ./backend:/var/www/html
+    working_dir: /var/www/html
+    ports:
+      - "8000:8000"
+    depends_on:
+      mysql:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    networks:
+      - app-network
+    command: sh -c "composer install && php artisan serve --host=0.0.0.0 --port=8000"
+
+
 networks:
   app-network:
     driver: bridge
