update Dockerfile and docker-compose for improved MySQL configuration and app initialization
NOW EVERYTHING IS WORKING

--- a/Challenge-4/database/mysql.cnf
+++ b/Challenge-4/database/mysql.cnf
@@ -28,3 +28,6 @@ general_log=0
 slow_query_log=1
 slow_query_log_file=/var/log/mysql/mysql-slow.log
 long_query_time=2
+
+# Authentication Settings
+default_authentication_plugin=caching_sha2_password
