--- a/Challenge-4/backend/Dockerfile
+++ b/Challenge-4/backend/Dockerfile
@@ -1,9 +1,10 @@
-FROM php:8.2-cli
+FROM php:8.2-cli-bullseye
 
 # Install system dependencies
-RUN apt-get update && \
-    apt-get install -y unzip git zlib1g-dev libzip-dev && \
-    docker-php-ext-install zip
+RUN apt-get update && apt-get upgrade -y && \
+    apt-get install -y --no-install-recommends unzip git zlib1g-dev libzip-dev && \
+    docker-php-ext-install zip pdo_mysql && \
+    apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Install Composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
