--- a/Challenge-4/docker-compose.yml
+++ b/Challenge-4/docker-compose.yml
@@ -43,6 +43,8 @@ services:
       context: ./backend
       dockerfile: Dockerfile
     container_name: laravel_app
+    env_file:
+      - ./backend/.env
     volumes:
       - ./backend:/var/www/html
     working_dir: /var/www/html
@@ -55,7 +57,7 @@ services:
         condition: service_healthy
     networks:
       - app-network
-    command: sh -c "composer install && php artisan serve --host=0.0.0.0 --port=8000"
+    command: sh -c "composer install && php artisan key:generate --ansi && php artisan migrate --force && php artisan serve --host=0.0.0.0 --port=8000"
 
 
 networks:
