--- a/Challenge-4/docker-compose.yml
+++ b/Challenge-4/docker-compose.yml
@@ -59,6 +59,24 @@ services:
       - app-network
     command: sh -c "composer install && php artisan key:generate --ansi && php artisan migrate --force && php artisan serve --host=0.0.0.0 --port=8000"
 
+  websocket_server:
+    image: quay.io/soketi/soketi:latest-16-alpine
+    container_name: websocket_server
+    restart: unless-stopped
+    ports:
+      - "6001:6001"
+    environment:
+      DEBUG: "true"
+      SOKETI_DEFAULT_APP_ID: "${PUSHER_APP_ID:-app-id}"
+      SOKETI_DEFAULT_APP_KEY: "${PUSHER_APP_KEY:-app-key}"
+      SOKETI_DEFAULT_APP_SECRET: "${PUSHER_APP_SECRET:-app-secret}"
+    networks:
+      - app-network
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:6001/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
 networks:
   app-network:
