--- a/Challenge-4/docker-compose.yml
+++ b/Challenge-4/docker-compose.yml
@@ -70,6 +70,7 @@ services:
       SOKETI_DEFAULT_APP_ID: "${PUSHER_APP_ID:-app-id}"
       SOKETI_DEFAULT_APP_KEY: "${PUSHER_APP_KEY:-app-key}"
       SOKETI_DEFAULT_APP_SECRET: "${PUSHER_APP_SECRET:-app-secret}"
+      SOKETI_ENABLE_CLIENT_MESSAGES: "true"
     networks:
       - app-network
     healthcheck:
